--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sarika-t.github.io/PageL/",
+  "homepage": "https://sarika-t.github.io/PageLand/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
